# office-backend-v2

./: .env  .gitignore  Readme.md  app.py  config.py  constants.py  docker-compose.yml  models.py  privatekey.pem  publickey.cer  pyproject.toml  requirements.txt  safe.py  test_app.py  test_model.py
instance/: db.sqlite
main/utils/: role.py  staff_id.py
migrations/versions/: fa09062fea7b_fixed_issues.py
