[tool.poetry]
name = "backend-v2"
version = "0.1.0"
description = "An api for the enetworksjobs operations"
authors = ["aldorax <climaxating@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-cors = "^4.0.1"
flask-bcrypt = "^1.0.1"
flask-jwt-extended = "^4.6.0"
flask-session = "^0.8.0"
flask-mail = "^0.9.1"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.30"
redis = "^5.0.4"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
waitress = "^3.0.0"
gunicorn = "^22.0.0"
passlib = "^1.7.4"
cloudinary = "^1.40.0"
psycopg2-binary = "^2.9.9"
flask-migrate = "^4.0.7"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
